# bramble

./: .containerignore  .gitignore  Cargo.toml  Containerfile  README.md  build.rs  package-lock.json  protocol.proto
.github/workflows/: build.yml
backend/: Cargo.toml
backend/migrations/: 20230131222009_init.sql
backend/sql/: device_all.sql  device_by_id.sql  device_insert.sql  feature_automation.sql  feature_by_device.sql  feature_by_device_readable_no_virtual.sql  feature_insert.sql  feature_load.sql
backend/sql/schema/: 0.sql
backend/src/: actor.rs  automation.rs  bus.rs  database.rs  db.rs  group.rs  http.rs  main.rs  program.rs  strings.rs  task.rs  topic.rs  value.rs  work.rs
backend/src/actor/: actor.rs  addr.rs  context.rs  error.rs  handler.rs  message_addr.rs  mod.rs  receive.rs  system.rs  task.rs  trap.rs
backend/src/api/: mod.rs
backend/src/bus/: mod.rs  subscriber.rs  topic.rs
backend/src/device/: device.rs  feature.rs  mod.rs  source.rs  sun.rs  task_spec.rs
backend/src/device/automation/: mod.rs  node.rs
backend/src/http/: mod.rs  pipe.rs
backend/src/http/rpc/: mod.rs  protocol.rs  zigbee2mqtt.rs
backend/src/integration/: mod.rs
backend/src/integration/zigbee2mqtt/: actor.rs  device.rs  mod.rs  server.rs
backend/src/io/: mod.rs  mqtt.rs
backend/src/io/mqtt/: connection.rs  manager.rs  mod.rs  mqtt.rs  server_info.rs
cli/: Cargo.toml
cli/src/: crc16.rs  main.rs  protoc.rs
cli/templates/: rust.tpl  typescript-prelude.tpl  typescript.tpl
frontend/: codegen.yaml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: main.css
frontend/src/: App.svelte  main.ts  routes.ts
frontend/src/data/: api.ts  api_types.ts  colors.ts  device.ts  devices.ts  geometry.ts  graphql_queries.ts  iterators.ts  keypressed.ts  log.ts  notification.ts  socket.ts  state.ts  utils.ts  ws.ts
frontend/src/data/api-gen/: api_types.ts  graphql_queries.ts
frontend/src/data/automate/: automate.ts  contextMenu.ts  node.ts
frontend/src/data/automate/nodes/: logic.ts  math.ts
frontend/src/lib/: Device.svelte  Feature.svelte  IntegrationSummary.svelte  Ledger.svelte  SelectInput.svelte  Source.svelte  SubMenu.svelte  TextInput.svelte  Value.svelte  WordsInput.svelte
frontend/src/lib/automate/: ConnectionLine.svelte  ContextMenu.svelte  HalfEdge.svelte  IOAnchor.svelte  IncompleteConnectionLine.svelte  Input.svelte  Node.svelte  NodeBox.svelte  Output.svelte  Program.svelte  SlotAnchor.svelte  SlotLabel.svelte  TopMenu.svelte  automate.ts
frontend/src/lib/automate/settings/: NumberCompare.svelte  StateCompare.svelte
frontend/src/net/: pipe.ts  protocol.ts  resocket.ts
frontend/src/routes/: Devices.svelte  Home.svelte  NotFound.svelte
frontend/src/routes/device/: Add.svelte  Automate.svelte  Virtual.svelte  Zigbee2MQTT.svelte
src/: main.rs
src/net/: mod.rs
ui/: package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/public/: main.css
ui/src/: App.svelte  colors.ts  main.ts  routes.ts
ui/src/data/: colors.ts  iterators.ts  log.ts
ui/src/lib/: Icon.svelte  MenuItem.svelte  Section.svelte  Source.svelte  Sparkline.svelte  SubMenu.svelte  iterators.ts
ui/src/lib/automate/: Edge.svelte  HalfEdge.svelte  IOAnchor.svelte  Input.svelte  Node.svelte  Output.svelte  automate.ts
ui/src/net/: pipe.ts  protocol.client.ts  protocol.ts  resocket.ts
ui/src/routes/: Devices.svelte  Home.svelte
ui/src/routes/device/: Add.svelte  Automate.svelte  Zigbee2MQTT.svelte
