[package]
name = "rome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt-protocol = { version = "0.11.2", features = ["tokio"] }
clap = "2"
env_logger = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net", "time", "io-util"] }
futures = { version = "0.3" }
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"

