[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "json"] }
uuid = { version = "1.2.2", features = [ "v4", "fast-rng" ] }
slotmap = "1.0.6"
futures = "0.3.25"
dashmap = "5.4.0"
flume = "0.10.14"
once_cell = "1.15.0"
smallvec = "1.9.0"
itertools = "0.10.5"
rand = "0.8.5"
futures-concurrency = "7.0.0"
anyhow = "1.0.65"
tracing = "0.1"
rumqttc = "0.17.0"
serde_json = "1.0.87"
serde = "1"
serde_derive = "1"
bytes = { version = "1", features = ["serde"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "macros", "sync", "parking_lot"] }
axum = { version = "0.6.1", features = ["ws", "headers"] }
async-graphql = "5.0.4"
async-graphql-axum = "5.0.4"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower-http = { version = "0.3.5", features = ["fs", "trace", "cors"] }
